--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "config": "^3.3.3",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
-    "gravator": "^1.0.2",
+    "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.18"
   },
