--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "spotify-web-api-node": "^5.0.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
