--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@nivo/bar": "^0.73.1",
+    "@nivo/core": "^0.73.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
     "date-fns": "^2.19.0",
     "moment": "^2.29.1",
+    "nivo": "^0.31.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-moment": "^1.1.1",
