--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jerome Tolentino",
   "license": "MIT",
   "dependencies": {
+    "@nivo/bar": "^0.73.1",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.3",
