--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "@nivo/bar": "^0.73.1",
+    "@nivo/calendar": "^0.73.0",
     "@nivo/core": "^0.73.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
