--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "nivo": "^0.31.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loading": "^2.0.3",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
